--- a/seminarski.bib
+++ b/seminarski.bib
@@ -1,31 +1,70 @@
-@book{laski2009software,
-  title={{Software Verification and Analysis}},
-  author={Laski, J. and Stanley, W.},
-  isbn={9781848822405},
-  url={http://books.google.rs/books?id=5hFnaDQ1jiAC},
-  year={2009},
-  publisher={Springer-Verlag},
-  address = {London}
+@misc{siteElixir,
+  title = {{Elixir}},
+  note = {on-line at: \url{https://elixir-lang.org/}},
+  author = {{José Valim}}
 }
 
-@misc{gcc,
-title = {{GNU gcc}},
-note = {on-line at: \url{http://gcc.gnu.org/}},
-    author = {Free Software Foundation},
-    year = {2013}
+@misc{sitePhoenix,
+  title = {{Phoenix framework documentation}},
+  note = {on-line at: \url{https://phoenixframework.org/}}
 }
 
-@article{haltingproblem,
-    author = {Turing, A. M.},
-    citeulike-article-id = {155758},
-    journal = {Proceedings of the London Mathematical Society},
-    keywords = {computability, entscheidungsproblem, turing},
-    number = {42},
-    pages = {230--265},
-    posted-at = {2005-04-08 18:11:59},
-    priority = {0},
-    title = {{On Computable Numbers, with an application to the Entscheidungsproblem}},
-    volume = {2},
-    year = {1936}
+@misc{siteNerves,
+  title = {{Nerves project documentation}},
+  note = {on-line at: \url{https://nerves-project.org/}}
 }
 
+@misc{sitePlataformatec,
+  title = {{Plataformatec}},
+  note = {on-line at: \url{https://plataformatec.com/}}
+}
+
+@misc{siteIEEE,
+  title = {{IEEE organization}},
+  note = {on-line at: \url{https://www.ieee.org/}}
+}
+
+@misc{siteDiscord,
+  title = {{Discord organization}},
+  note = {on-line at: \url{https://discordapp.com/open-source}}
+}
+
+@misc{sitePinterest,
+  title = {{Pinterest}},
+  note = {on-line at: \url{https://github.com/pinterest}}
+}
+
+@book{knjigaElixir,
+  title={{Programming Elixir 1.3}},
+  author={Dave Thomas},
+  isbn={978-1-68050-200-8},
+  url={https://pragprog.com/book/elixir13/programming-elixir-1-3},
+  year={2016},
+  publisher={The Pragmatic Bookshelf},
+  address = {Raleigh, North Carolina}
+}
+
+@conference{confNIPS,
+    author = {{José Valim, Anshuman Chhabra}},
+    title = {{Tensorflex: Tensorflow bindings for the Elixir programming language}},
+    booktitle = {{32nd Conference on Neural Information Processing Systems (NIPS)}},
+    year= {2018},
+}
+
+@book{knjigaPhoenix,
+  title={{Programming Phoenix}},
+  author={{McCord Chris, Tate Bruce, Valim José}},
+  isbn={9781680504361},
+  page={18},
+  year={2016},
+  publisher={The Pragmatic Bookshelf},
+  address = {Raleigh, North Carolina}
+}
+
+@book{knjigaElixir2,
+  title={{Introducing Elixir}},
+  author={{Simon St. Laurent, J. David Eisenberg}},
+  isbn={978-1-449-36999-6},
+  year={2014},
+  publisher={O'Reilly Media}
+}
